fix dropdown overflow

--- a/pages/catalog/index.module.scss
+++ b/pages/catalog/index.module.scss
@@ -204,5 +204,5 @@
 }
 
 .scroll{
-  overflow: hidden !important;
+
 }
