--- a/scss/app.scss
+++ b/scss/app.scss
@@ -56,3 +56,6 @@ a{
     text-decoration: none;
   }
 }
+.infinite-scroll-component {
+  overflow: inherit;
+}
